# sully

./: .gitignore  Makefile  README.md  pyproject.toml
sully/: __init__.py  cli.py  config.py  uv.py
sully/commands/: add.py  check.py  doc.py  init.py  remove.py  run.py  sync.py  test.py
tests/: test_cli.py  test_commands.py  test_config.py  test_init.py  test_uv.py
